<resources>
    <string name="app_name">App_Comunity</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Calendario</string>
    <string name="title_notifications">Notificaciones</string>

    <!-- Strings related to login -->
    <string name="login_ingresar">Iniciar sesión</string>
    <string name="login_resgistro">Registrar</string>
    <string name="login_nombre">Nombre se usuario</string>
    <string name="login_contrasena">Contraseña</string>
    <string name="login_email">Correo Electronico</string>
    <string name="login_confirmar_contrasena">Confirmar contraseña</string>
    <string name="login_hint_ingresar">Ingresar</string>
    <string name="login_hint_contrasena">Contraseña</string>
    <string name="login_hint_email">Ingresa tu correo</string>
    <string name="title_activity_principal_home">principal_home</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_menu_down">MenuDown</string>


    <string name="title_foros">Foros</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_calendar">Calendario</string>

    <string name="title_activity_splash_screen">SplashScreen</string>


    <!-- Intructivo-->
    <string name="instructivo_empezar">Empieza ahora</string>
    <string name="instructivo_ingresar">Ingresar</string>
    <string name="instructivo_intro">Comunidad de Aprendizaje virtual que permite el intercambio de conocimientos entre profesores y estudiantes mejorando el rendimiento academico.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_induccion">Induccion</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_4">Tab 4</string>
    <string name="induccion_register_bar">Registro</string>
    <string name="checkbox_terminos">Acepto terminos y condiciones</string>
    <string name="title_activity_instructivo">Instructivo</string>
    <string name="instructivo_bienvenida">A+A es una comunidad virtual que te permite aprender y enseñar donde tú quieras, cuando tú quieras.</string>
    <string name="instructivo_organiza">Planea tus horarios, eventos importantes y actividades.</string>
    <string name="instructivo_opina">En nuestros foros virtuales comparte tu opinión de distintos temas y entérate de lo que todos piensan.</string>
    <string name="title_group">Grupos</string>

</resources>
