<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Induccion.InduccionLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/f_background_2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginRight="18dp"
                android:text="@string/induccion_register_bar"
                android:textAlignment="center"
                android:textColor="@color/text_white"
                android:textSize="@dimen/h1_titulo"
                android:textStyle="bold" />

        </android.support.v7.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/app_margin_verical"
                    android:inputType="textPersonName"
                    android:hint="@string/login_nombre" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:layout_marginVertical="@dimen/app_margin_verical"
                    android:hint="@string/login_contrasena" />

                <Button
                    android:id="@+id/btn_induccion_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_boton_state_1"
                    android:text="@string/login_ingresar" />


            </LinearLayout>
        </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"></LinearLayout>


    </LinearLayout>
</FrameLayout>
